--- a/CPP00/ex00/Makefile
+++ b/CPP00/ex00/Makefile
@@ -1,11 +1,8 @@
-NAME    = phonebook
+NAME    = megaphone
 CXX     = clang++
 CXXFLAGS= -Wall -Wextra -Werror -std=c++98
 RM      = rm -f
-SRC     =  main.cpp      \
-			src/phonebook.cpp \
-			src/messages.cpp \
-			src/contact.cpp
+SRC     =  megaphone.cpp
 
 OBJ     = $(SRC:.cpp=.o)
 
