--- a/CPP00/ex01/Makefile
+++ b/CPP00/ex01/Makefile
@@ -1,20 +1,24 @@
-NAME    = phonebook
-CXX     = clang++
+NAME	= phonebook
+CXX		= c++
 CXXFLAGS= -Wall -Wextra -Werror -std=c++98
-RM      = rm -f
-SRC     =  main.cpp      \
-			src/phonebook.cpp \
-			src/messages.cpp \
+RM		= rm -f
+SRC		=	main.cpp			\
+			src/phonebook.cpp	\
+			src/messages.cpp	\
 			src/contact.cpp
+HDR		=	headers/colors.hpp	\
+			headers/contact.hpp	\
+			headers/phonebook.hpp	\
+			headers/main.hpp
 
-OBJ     = $(SRC:.cpp=.o)
+OBJ		= $(SRC:.cpp=.o)
 
 all: $(NAME)
 
 $(NAME): $(OBJ)
-	$(CXX) $(CXXFLAGS) -o $@ $^
+	$(CXX) $(CXXFLAGS)  $^ -o $@
 
-%.o: %.cpp
+%.o: %.cpp headers/colors.hpp headers/contact.hpp headers/phonebook.hpp headers/main.hpp
 	$(CXX) $(CXXFLAGS) -c $< -o $@
 
 clean:
