--- a/CPP00/ex00/Makefile
+++ b/CPP00/ex00/Makefile
@@ -1,8 +1,8 @@
 NAME    = megaphone
-CXX     = clang++
+CXX     = c++
 CXXFLAGS= -Wall -Wextra -Werror -std=c++98
 RM      = rm -f
-SRC     =  megaphone.cpp
+SRC     = megaphone.cpp
 
 OBJ     = $(SRC:.cpp=.o)
 
