--- a/CPP01/ex04/Makefile
+++ b/CPP01/ex04/Makefile
@@ -1,11 +1,8 @@
-NAME    = zombie
+NAME    = replace
 CXX     = c++
 CXXFLAGS= -Wall -Wextra -Werror -std=c++98
 RM      = rm -f
-SRC     = 	main.cpp		\
-			newZombie.cpp	\
-			randomChump.cpp	\
-			Zombie.cpp		\
+SRC     = 	main.cpp\
 
 OBJ     = $(SRC:.cpp=.o)
 
